--- a/report/templates/report_template.html
+++ b/report/templates/report_template.html
@@ -28,6 +28,8 @@
                     <td align="center"><span class="cut">{{ appsize }}</span></td>
                     <th>遍历时间</th>
                     <td align="center"><span class="cut">{{ runtime }}</span></td>
+                    <th>环境</th>
+                    <td align="center"><span class="cut">测试</span></td>
                 </tr>
                 <tr>
                     <th>测试设备</th>
