--- a/report/templates/report_template.html
+++ b/report/templates/report_template.html
@@ -487,7 +487,7 @@
                         month: '%Y-%m',
                         year: '%Y'
                     },formatter: function () {
-                                var mInfo = pageactivitya;
+                                var mInfo = pageactivity;
                                 var yInfo = pagetime;
                                 var point = this.points[0];
                                 return '<b>' + "耗时: </b>" + point.y + '<br/>' +
